# habotat

./: ChangeLog  Makefile.am  Makefile.in  README  TODO  configure  configure.ac  java.mak
CVS/: Entries  Repository
adapters/: Makefile.am  Makefile.in
adapters/CVS/: Repository
adapters/aim/: Makefile.am  Makefile.in  docs.tar  manifest.mf
adapters/aim/CVS/: Entries  Repository
adapters/aim/habotat/CVS/: Repository
adapters/aim/habotat/adapters/CVS/: Repository
adapters/aim/habotat/adapters/aim/: AIMIMAdapter.java  AIMIMConnection.java  AIMUI.java
adapters/aim/habotat/adapters/aim/CVS/: Entries  Repository
adapters/aim/habotat/adapters/aim/images/CVS/: Entries  Repository
adapters/jabber/: Makefile.am  Makefile.in  docs.tar  manifest.mf
adapters/jabber/CVS/: Entries  Repository
adapters/jabber/habotat/CVS/: Repository
adapters/jabber/habotat/adapters/CVS/: Repository
adapters/jabber/habotat/adapters/jabber/: JabberIMAdapter.java  JabberIMConnection.java  JabberUI.java
adapters/jabber/habotat/adapters/jabber/CVS/: Entries  Repository
adapters/jabber/habotat/adapters/jabber/images/CVS/: Entries  Repository
adapters/yahoo/: Makefile.am  Makefile.in  docs.tar  manifest.mf
adapters/yahoo/CVS/: Entries  Repository
adapters/yahoo/habotat/CVS/: Repository
adapters/yahoo/habotat/adapters/CVS/: Repository
adapters/yahoo/habotat/adapters/yahoo/: YahooIMAdapter.java  YahooIMConnection.java  YahooUI.java
adapters/yahoo/habotat/adapters/yahoo/CVS/: Entries  Repository
adapters/yahoo/habotat/adapters/yahoo/images/CVS/: Entries  Repository
bots/: Makefile.am  Makefile.in
bots/CVS/: Entries  Repository
bots/bidbot/: Makefile.am  Makefile.in  docs.tar  manifest.mf
bots/bidbot/CVS/: Entries  Repository
bots/bidbot/habotat/CVS/: Repository
bots/bidbot/habotat/bots/CVS/: Repository
bots/bidbot/habotat/bots/bidbot/: BidBot.java  BidBotUI.java  eBayServer.java
bots/bidbot/habotat/bots/bidbot/CVS/: Entries  Repository
bots/bidbot/habotat/bots/bidbot/images/CVS/: Entries  Repository
bots/bidbot/habotat/bots/bidbot/locale/: bot.msg
bots/bidbot/habotat/bots/bidbot/locale/CVS/: Repository
bots/echo/: Makefile.am  Makefile.in  docs.tar  manifest.mf
bots/echo/CVS/: Entries  Repository
bots/echo/habotat/CVS/: Repository
bots/echo/habotat/bots/CVS/: Repository
bots/echo/habotat/bots/echo/: EchoBot.java
bots/echo/habotat/bots/echo/CVS/: Entries  Repository
bots/echo/habotat/bots/echo/images/CVS/: Entries  Repository
bots/execubot/: Makefile.am  Makefile.in  docs.tar  manifest.mf
bots/execubot/CVS/: Entries  Repository
bots/execubot/habotat/CVS/: Repository
bots/execubot/habotat/bots/CVS/: Repository
bots/execubot/habotat/bots/execubot/: ExecuBot.java  ExecuBotUI.java
bots/execubot/habotat/bots/execubot/CVS/: Entries  Repository
bots/execubot/habotat/bots/execubot/images/CVS/: Entries  Repository
bots/execubot/habotat/bots/execubot/locale/: bot.msg
bots/execubot/habotat/bots/execubot/locale/CVS/: Entries  Repository
bots/horoscope/: Makefile.am  Makefile.in  docs.tar  manifest.mf
bots/jotbot/: Makefile.am  Makefile.in  docs.tar  manifest.mf
bots/jotbot/CVS/: Entries  Repository
bots/jotbot/habotat/CVS/: Repository
bots/jotbot/habotat/bots/CVS/: Repository
bots/jotbot/habotat/bots/jotbot/: JotBot.java
bots/jotbot/habotat/bots/jotbot/CVS/: Entries  Repository
bots/jotbot/habotat/bots/jotbot/images/CVS/: Entries  Repository
bots/news/: Makefile.am  Makefile.in  docs.tar  manifest.mf
bots/pubs/: Makefile.am  Makefile.in  docs.tar  manifest.mf
bots/reminder/: Makefile.am  Makefile.in  docs.tar  manifest.mf
bots/stock/: Makefile.am  (+3 more)
bots/weather/: Makefile.am  Makefile.in  docs.tar  manifest.mf
bots/weather/CVS/: Entries  Repository
bots/weather/habotat/CVS/: Repository
bots/weather/habotat/bots/CVS/: Repository
bots/weather/habotat/bots/weather/: WeatherBot.java
bots/weather/habotat/bots/weather/CVS/: Entries  Repository
bots/weather/habotat/bots/weather/images/CVS/: Entries  Repository
bots/weather/habotat/bots/weather/xsl/: weather.xsl
bots/weather/habotat/bots/weather/xsl/CVS/: Entries  Repository
docs/: Makefile.am  Makefile.in  habotat.info  habotat.texi
server/: Makefile.am  Makefile.in  docs.tar  habotat.sh.in  manifest.mf
server/CVS/: Entries  Repository
server/habotat/CVS/: Repository
server/habotat/api/: Bot.java  BotContext.java  BotEvent.java  BotException.java  BotLogger.java  BotSession.java  CookieStore.java  HTMLForm.java  HTMLPage.java  HTTPCookie.java  IMAdapter.java  IMConnection.java  IMConnectionListener.java  IMException.java  InvalidXMLException.java  LRUCache.java  MessageEvent.java  PluginUI.java  ProcessUtils.java  RSSFeed.java  RSSFeedCache.java  SessionTimeoutEvent.java  StringUtils.java  TimeSpec.java  TimerEvent.java  UserStatusEvent.java  WebLink.java  XMLUtils.java
server/habotat/api/CVS/: Entries  Repository
server/habotat/engine/: AccountDef.java  AccountList.java  BotContextImpl.java  BotDef.java  BotList.java  BotManager.java  BotSessionImpl.java  Def.java  EventQueue.java  HabotatServer.java  IMEvent.java  IMListener.java  PluginDef.java  PluginList.java  Scheduler.java  SessionCache.java  SessionTimeoutObserver.java  SignOnEvent.java  SignOnListener.java  XSLManager.java
server/habotat/engine/CVS/: Entries  Repository
server/habotat/engine/xsl/: rdf.xsl  rss.xsl
server/habotat/engine/xsl/CVS/: Entries  Repository
server/habotat/gui/: AccountDialog.java  AccountsPanel.java  AdapterChooserDialog.java  AdaptersDialog.java  BotDialog.java  BotsPanel.java  ConsoleDialog.java  HabotatFrame.java  HabotatGUI.java  PluginCellRenderer.java  PluginChooserDialog.java  PluginsPanel.java  PreferencesDialog.java  PropertiesDialog.java  SetupDialog.java
server/habotat/gui/CVS/: Entries  Repository
server/habotat/gui/html/: habotat.html
server/habotat/gui/html/CVS/: Entries  Repository
server/habotat/gui/images/CVS/: Entries  Repository
server/habotat/gui/locale/: habotat.msg
server/habotat/gui/locale/CVS/: Entries  Repository
(+68 files in other folders)
