#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.57)
AC_INIT(habotat, 0.5.1)
AM_INIT_AUTOMAKE([nostdinc])

AC_PROG_MAKE_SET

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CANONICAL_HOST

AC_OUTPUT(
	Makefile
	docs/Makefile
	server/Makefile
	server/habotat.sh
	bots/Makefile
	bots/echo/Makefile
	bots/news/Makefile
	bots/horoscope/Makefile
	bots/pubs/Makefile
	bots/weather/Makefile
	bots/urlminder/Makefile
	bots/bidbot/Makefile
	bots/reminder/Makefile
	bots/jotbot/Makefile
	bots/execubot/Makefile
	bots/stock/Makefile
	adapters/Makefile
	adapters/jabber/Makefile
	adapters/yahoo/Makefile
	adapters/aim/Makefile
	)


# eof
